--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,3 +1,4 @@
+header{background-image: url(../image/01_index_02_header.png);background-repeat: no-repeat;background-size: cover;background-position: center center;}
 nav {
   width: 100%;
   max-width: v.$max-width;
@@ -22,7 +23,7 @@ nav {
   .menu-toggler {
     position: absolute;
     right: 30px;
-    top: 29px;
+    top: 20px;
     width: 25px;
     z-index: 1000;
     display: none;
@@ -51,7 +52,6 @@ nav {
   .sidebar {
     display: flex;
     align-items: center;
-    padding: 0 15px;
     margin: 0 auto;
 
     .nav-menu {
@@ -63,7 +63,10 @@ nav {
 
 
     .nav-brand {
-      padding: 20px;
+      @include v.under-pad-width {
+        width: 18vw;
+        padding: 15px 0;
+      }
     }
 
     .menu {
@@ -97,30 +100,19 @@ nav {
         li {
           padding: 4px 0;
           margin-bottom: 5px;
+          background-color: v.$font-secondary;
           transform: translateY(-150px);
-          transition: transform .5s cubic-bezier(.74, -0.23, .4, .88);
+          transition: transform .5s cubic-bezier(.74, -0.23, .4, .88),background-color 0.2s linear;
 
           @include v.under-pad-width {
             transform: none;
             transition: none;
+            background-color: transparent;
           }
-
-          &:nth-of-type(odd) {
-            background-color: v.$primary;
-
-            @include v.under-pad-width {
-              background-color: transparent;
-            }
+          &:hover{
+            background-color: v.$primary
           }
-
-          &:nth-of-type(even) {
-            background-color: v.$font-secondary;
-
-            @include v.under-pad-width {
-              background-color: transparent;
-            }
-          }
-
+        
           &:first-of-type {
             @include v.under-pad-width {
               border-top: 1px solid v.$primary;
@@ -129,6 +121,7 @@ nav {
 
           a {
             color: v.$font-primary;
+           
           }
         }
       }
@@ -190,6 +183,7 @@ nav {
           border-radius: 22px;
           color: v.$font-primary;
           display: none;
+          @extend %weight600;
 
           .user-name {
             display: inline-flex;
@@ -198,7 +192,23 @@ nav {
             overflow: hidden;
             white-space: nowrap;
             text-overflow: clip;
-            margin-right: 2px;
+            margin:0 5px;
+          }
+          .svg-icons{
+            display: inline-block;
+            &.i-person{
+              width: 25px;
+              height: 20px;
+              background: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 0C9.62663 0 7.30655 0.703788 5.33316 2.02236C3.35977 3.34094 1.8217 5.21509 0.913451 7.4078C0.00519943 9.60051 -0.232441 12.0133 0.230582 14.3411C0.693605 16.6689 1.83649 18.8071 3.51472 20.4853C5.19295 22.1635 7.33115 23.3064 9.65892 23.7694C11.9867 24.2324 14.3995 23.9948 16.5922 23.0866C18.7849 22.1783 20.6591 20.6402 21.9776 18.6668C23.2962 16.6935 24 14.3734 24 12C24 8.8174 22.7357 5.76516 20.4853 3.51472C18.2349 1.26428 15.1826 0 12 0V0ZM14.6 8.77C14.8314 8.77 15.0576 8.83862 15.25 8.96718C15.4424 9.09574 15.5924 9.27847 15.6809 9.49226C15.7695 9.70605 15.7927 9.9413 15.7475 10.1683C15.7024 10.3952 15.5909 10.6037 15.4273 10.7673C15.2637 10.9309 15.0552 11.0424 14.8283 11.0875C14.6013 11.1327 14.3661 11.1095 14.1523 11.0209C13.9385 10.9324 13.7557 10.7824 13.6272 10.59C13.4986 10.3976 13.43 10.1714 13.43 9.94C13.43 9.6297 13.5533 9.3321 13.7727 9.11269C13.9921 8.89327 14.2897 8.77 14.6 8.77V8.77ZM10 8C10.2314 8 10.4576 8.06862 10.65 8.19718C10.8424 8.32574 10.9924 8.50847 11.0809 8.72226C11.1695 8.93605 11.1927 9.1713 11.1475 9.39826C11.1024 9.62521 10.9909 9.83369 10.8273 9.99732C10.6637 10.1609 10.4552 10.2724 10.2283 10.3175C10.0013 10.3627 9.76606 10.3395 9.55227 10.2509C9.33848 10.1624 9.15575 10.0124 9.02719 9.82002C8.89863 9.62761 8.83001 9.4014 8.83001 9.17C8.83001 8.8597 8.95327 8.5621 9.17269 8.34268C9.39211 8.12327 9.6897 8 10 8ZM17 16C16.87 16.07 16.74 16.13 16.62 16.21L15.8 16.58C14.217 17.244 12.4583 17.3635 10.8 16.92C10.0971 16.7127 9.42456 16.4135 8.80001 16.03C8.68001 15.94 8.56001 15.88 8.45001 15.79C8.21844 15.6347 7.99483 15.4678 7.78001 15.29L7.37001 15C6.83833 14.551 6.37659 14.0252 6.00001 13.44C5.95461 13.2946 5.95652 13.1385 6.00545 12.9942C6.05438 12.85 6.14781 12.7249 6.2723 12.6371C6.39679 12.5493 6.54592 12.5032 6.69825 12.5056C6.85058 12.5079 6.99824 12.5584 7.12001 12.65C7.59648 13.2492 8.12888 13.8017 8.71001 14.3C9.61109 15.0599 10.7073 15.5518 11.874 15.7198C13.0407 15.8877 14.2312 15.7249 15.31 15.25C15.8033 15.0465 16.2756 14.7953 16.72 14.5C16.8329 14.4065 16.9716 14.3497 17.1176 14.3371C17.2636 14.3245 17.41 14.3568 17.5371 14.4296C17.6643 14.5025 17.7662 14.6124 17.8293 14.7447C17.8923 14.877 17.9135 15.0253 17.89 15.17C17.82 15.56 17.35 15.82 17 16Z' fill='white'/%3E%3C/svg%3E ") no-repeat center;
+              background-size: contain;
+              margin-right: 2px;
+            }
+            &.i-menu{
+              width: 20px;
+              height: 15px;
+              background: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.62 1.24H16.62C16.7844 1.24 16.9421 1.17468 17.0584 1.05841C17.1747 0.942134 17.24 0.784434 17.24 0.62C17.24 0.455566 17.1747 0.297866 17.0584 0.181594C16.9421 0.0653212 16.7844 0 16.62 0H0.62C0.455566 0 0.297866 0.0653212 0.181594 0.181594C0.0653213 0.297866 0 0.455566 0 0.62C0 0.784434 0.0653213 0.942134 0.181594 1.05841C0.297866 1.17468 0.455566 1.24 0.62 1.24Z' fill='white'/%3E%3Cpath d='M0.62 7.24H16.62C16.7844 7.24 16.9421 7.17468 17.0584 7.05841C17.1747 6.94213 17.24 6.78443 17.24 6.62C17.24 6.45557 17.1747 6.29787 17.0584 6.18159C16.9421 6.06532 16.7844 6 16.62 6H0.62C0.455566 6 0.297866 6.06532 0.181594 6.18159C0.0653212 6.29787 0 6.45557 0 6.62C0 6.78443 0.0653212 6.94213 0.181594 7.05841C0.297866 7.17468 0.455566 7.24 0.62 7.24Z' fill='white'/%3E%3Cpath d='M16.62 13.24H0.62C0.455566 13.24 0.297866 13.1747 0.181594 13.0584C0.0653212 12.9421 0 12.7844 0 12.62C0 12.4556 0.0653212 12.2979 0.181594 12.1816C0.297866 12.0653 0.455566 12 0.62 12H16.62C16.7844 12 16.9421 12.0653 17.0584 12.1816C17.1747 12.2979 17.24 12.4556 17.24 12.62C17.24 12.7844 17.1747 12.9421 17.0584 13.0584C16.9421 13.1747 16.7844 13.24 16.62 13.24Z' fill='white'/%3E%3C/svg%3E ") no-repeat center;
+              background-size: contain;
+            }
           }
         }
 
@@ -360,7 +370,8 @@ nav {
         }
 
         .user {
-          display: block;
+          display: flex;
+          align-items: center;
         }
 
         .user-login,
