--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,7 +1,9 @@
 @use "variables"as v;
+@import "_fonts";
 @import "_normalize";
 @import "_nav";
 @import "_jqdatepicker";
+
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -10,16 +12,16 @@
 body,
 html {
   -webkit-text-size-adjust: 100%;
-  letter-spacing: 1.3px;
+  letter-spacing: 1.3px; 
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   font-size: 14px;
-  position: relative;
+  position: relative; 
   background-color: v.$bg-color;
-  line-height: 1.6;
-  font-family: Microsoft JhengHei, Arial, sans-serif;
-  font-style: normal;
+  line-height: 1.6; 
+  font-family: '源泉圓體 R',Microsoft JhengHei, Arial, sans-serif;
+
 
   &.no-scroll {
     overflow: hidden;
@@ -147,6 +149,7 @@ select {
   padding: 0 15px;
   width: 100%;
   color: v.$font-primary;
+  font-family: '源泉圓體 R',Microsoft JhengHei, Arial, sans-serif;
 
   option {
     background: #3a3a3a;
@@ -218,7 +221,7 @@ input:-internal-autofill-selected {
 }
 
 .s-font {
-  font-size: 0.9rem;
+  font-size: 0.93rem;
 }
 
 .xs-font {
@@ -303,6 +306,8 @@ input:-internal-autofill-selected {
     margin: 0;
 
     &:nth-of-type(1) {
+      font-family: 'Eurostile',Microsoft JhengHei, Arial, sans-serif;
+      font-size: 0.98rem;
       @extend %weight300;
 
       &::before {
@@ -343,7 +348,7 @@ input:-internal-autofill-selected {
 }
 
 .movie-item {
-
+  img{border-radius: 10px;}
   .up-date {
     margin: 5px 0 30px 0;
     color: v.$primary;
@@ -355,16 +360,23 @@ input:-internal-autofill-selected {
 
   .book-btn {
     display: inline-block;
-    padding: 8px 25px;
+    padding: 10px 30px;
     background-color: #5a98c0;
-    border-radius: 5px;
+    border-radius: 3px;
     margin-bottom: 30px;
     color: v.$font-primary;
     cursor: pointer;
-    @extend %weight400;
-
-    .material-icons {
+    @extend %weight600;
+    a{display: flex;align-items: end;}
+    .svg-icons {
+      display: inline-block;
       margin-right: 10px;
+      &.i-ticket{
+        width: 29px;
+        height: 22px;
+        background: url("data:image/svg+xml,%3Csvg width='35' height='22' viewBox='0 0 35 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M35.0005 19.6401V14.6401C34.9968 14.2408 34.844 13.8573 34.572 13.5649C34.3 13.2726 33.9285 13.0925 33.5305 13.0601C32.9191 13.0085 32.3482 12.733 31.9274 12.2864C31.5066 11.8398 31.2656 11.2535 31.2505 10.6401V10.6401C31.256 10.0208 31.493 9.42591 31.9149 8.97251C32.3369 8.51912 32.9132 8.24001 33.5305 8.19009C33.9218 8.154 34.2867 7.97687 34.5572 7.69171C34.8276 7.40655 34.9852 7.0328 35.0005 6.64009V1.64009C35.0058 1.42747 34.9687 1.21593 34.8913 1.01783C34.8139 0.819723 34.6978 0.639039 34.5497 0.486338C34.4017 0.333638 34.2247 0.211986 34.0291 0.128496C33.8335 0.0450059 33.6232 0.00135324 33.4105 9.05335e-05H25.4105C24.9206 0.00365434 24.4382 0.119995 24.0005 0.340091C23.9142 0.379639 23.8204 0.400111 23.7255 0.400111C23.6306 0.400111 23.5368 0.379639 23.4505 0.340091C23.0012 0.11285 22.504 -0.00372067 22.0005 9.05335e-05H1.5905C1.37782 0.00135324 1.16753 0.0450059 0.971914 0.128496C0.776302 0.211986 0.599298 0.333638 0.451253 0.486338C0.303209 0.639039 0.187094 0.819723 0.109698 1.01783C0.0323026 1.21593 -0.00482004 1.42747 0.000500816 1.64009V6.64009C0.0161014 7.03437 0.175071 7.4094 0.44757 7.69479C0.720069 7.98018 1.08736 8.1563 1.4805 8.19009C2.09208 8.2454 2.66085 8.52745 3.07505 8.9808C3.48925 9.43415 3.71892 10.026 3.71892 10.6401C3.71892 11.2542 3.48925 11.846 3.07505 12.2994C2.66085 12.7527 2.09208 13.0348 1.4805 13.0901C1.08736 13.1239 0.720069 13.3 0.44757 13.5854C0.175071 13.8708 0.0161014 14.2458 0.000500816 14.6401V19.6401C0.000500816 20.0644 0.169072 20.4714 0.46913 20.7715C0.769188 21.0715 1.17615 21.2401 1.6005 21.2401H22.0505C22.5436 21.237 23.0294 21.1207 23.4705 20.9001C23.5551 20.8607 23.6472 20.8403 23.7405 20.8403C23.8338 20.8403 23.9259 20.8607 24.0105 20.9001C24.4547 21.1218 24.944 21.2382 25.4405 21.2401H33.4405C33.8579 21.2297 34.2546 21.0565 34.5461 20.7576C34.8376 20.4586 35.0006 20.0576 35.0005 19.6401ZM23.7405 5.06009C23.401 5.06009 23.0755 4.92523 22.8354 4.68519C22.5954 4.44514 22.4605 4.11957 22.4605 3.78009V3.78009V2.47009C22.4605 2.13061 22.5954 1.80504 22.8354 1.56499C23.0755 1.32495 23.401 1.19009 23.7405 1.19009C24.08 1.19009 24.4056 1.32495 24.6456 1.56499C24.8856 1.80504 25.0205 2.13061 25.0205 2.47009V3.77009C25.0205 4.10957 24.8856 4.43514 24.6456 4.67519C24.4056 4.91523 24.08 5.05009 23.7405 5.05009V5.06009ZM23.7405 10.0601C23.401 10.0601 23.0755 9.92523 22.8354 9.68519C22.5954 9.44514 22.4605 9.11957 22.4605 8.78009V7.52009C22.4605 7.18061 22.5954 6.85504 22.8354 6.61499C23.0755 6.37495 23.401 6.24009 23.7405 6.24009C24.08 6.24009 24.4056 6.37495 24.6456 6.61499C24.8856 6.85504 25.0205 7.18061 25.0205 7.52009V8.77009C25.0205 9.10957 24.8856 9.43514 24.6456 9.67519C24.4056 9.91523 24.08 10.0501 23.7405 10.0501V10.0601ZM23.7405 15.0601C23.5716 15.0601 23.4043 15.0267 23.2483 14.9617C23.0924 14.8968 22.9508 14.8016 22.8319 14.6817C22.7129 14.5617 22.6188 14.4195 22.555 14.263C22.4913 14.1065 22.4592 13.939 22.4605 13.7701V13.7701V12.5101C22.4605 12.1706 22.5954 11.845 22.8354 11.605C23.0755 11.3649 23.401 11.2301 23.7405 11.2301C24.08 11.2301 24.4056 11.3649 24.6456 11.605C24.8856 11.845 25.0205 12.1706 25.0205 12.5101V13.7501C25.0218 13.919 24.9897 14.0865 24.926 14.243C24.8622 14.3995 24.7681 14.5417 24.6492 14.6617C24.5302 14.7816 24.3886 14.8768 24.2327 14.9417C24.0767 15.0067 23.9094 15.0401 23.7405 15.0401V15.0601ZM23.7405 20.0601C23.401 20.0601 23.0755 19.9252 22.8354 19.6852C22.5954 19.4451 22.4605 19.1196 22.4605 18.7801V18.7801V17.4801C22.4448 17.3018 22.4663 17.1222 22.5237 16.9527C22.5811 16.7832 22.6732 16.6275 22.7941 16.4955C22.9149 16.3635 23.0619 16.2581 23.2257 16.186C23.3895 16.1139 23.5665 16.0766 23.7455 16.0766C23.9245 16.0766 24.1015 16.1139 24.2653 16.186C24.4291 16.2581 24.5761 16.3635 24.6969 16.4955C24.8178 16.6275 24.9099 16.7832 24.9673 16.9527C25.0247 17.1222 25.0462 17.3018 25.0305 17.4801V18.8101C25.0305 19.1496 24.8956 19.4751 24.6556 19.7152C24.4156 19.9552 24.09 20.0901 23.7505 20.0901L23.7405 20.0601Z' fill='white'/%3E%3C/svg%3E ") no-repeat center;
+        background-size: contain;
+      }
     }
   }
 
@@ -379,22 +391,21 @@ input:-internal-autofill-selected {
 
       span {
         font-weight: normal;
-        border-left: 1px solid #fff;
-        padding-left: 10px;
-        margin-left: 10px;
         display: inline-block;
       }
     }
 
     .list-row {
       width: 100%;
-      display: -webkit-inline-box;
-
-      div {
-        max-width: 93%;
-
-        @include v.mini-width() {
-          max-width: 90%;
+      display: flex;
+      span{
+        &:first-of-type{
+        border-right: 1px solid #fff;
+        padding-right: 10px;
+        margin-right: 10px;
+        display: inline-block;
+        height: fit-content;
+        
         }
       }
     }
@@ -411,17 +422,19 @@ input:-internal-autofill-selected {
     display: block;
     color: v.$font-secondary;
     line-height: 1.3;
+    font-family: 'Eurostile',Microsoft JhengHei, Arial, sans-serif;
   }
 }
 
 .movie-level {
   margin: 10px 0;
-  padding: 2px 10px;
+  width: 75px;
+  max-width: 75px;
+  padding: 5px 10px 2px 10px;
   display: inline-block;
   color: v.$secondary;
   text-align: center;
   @extend %weight600;
-
 }
 
 .content-row {
@@ -734,11 +747,14 @@ input:-internal-autofill-selected {
 }
 
 footer {
-  background-color: #0f0f0f;
+  background-color: #141414;
   color: v.$font-primary;
+  padding: 0 15px;
 
   img {
-    flex: 0;
+    width: 200px;
+    @include v.pad-width {margin-bottom: 20px;}
+    @include v.phone-width {width: 120px;margin-bottom: 20px;}
   }
 
   &>div {
@@ -748,16 +764,18 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 30px;
+    padding: 40px 0;
 
     @include v.pad-width {
       flex-direction: column;
       padding: 40px 15px;
+      
     }
 
     @include v.phone-width {
       flex-direction: column;
       padding: 40px 15px;
+      
     }
 
     div {
@@ -773,20 +791,45 @@ footer {
     }
 
     a {
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
       width: 40px;
       height: 40px;
-      background-color: #c7c7c7;
+      background-color: #B9B9B9;
       border-radius: 50%;
       text-align: center;
       margin-bottom: 10px;
       margin-right: 10px;
+      &.yt{svg{width: 25px;}}
+      &:hover{
 
-      img {
-        width: 20px;
-        height: 20px;
-        margin-top: 10px;
-      }
+        &.fb{
+          path{
+            fill: #fff;
+          }
+          background-color: #3A589A;
+        }
+        &.ig{
+          path{
+            fill: #fff;
+          }
+          background:url(../image/svg/ig-bg.svg) no-repeat center center;
+        }
+        &.yt{ 
+          path{
+            fill: #fff;
+          }
+          background-color: #C02025;
+        }
+        &.email{
+            path{
+              fill: #fff;
+            }
+          background-color: #C53932;
+        }
+      } 
+     
     }
   }
 }
@@ -902,11 +945,21 @@ footer {
 /*closing*/
 .close-modal {
   position: absolute;
-  top: -0.2em;
-  right: 0.4em;
+  top: 0.5em;
+  right: 0.5em;
   text-decoration: none;
   color: black;
   font-size: 1.7em;
+  
+   .svg-icons{
+      display: block;
+    &.i-close{
+      width: 15px;
+      height: 15px;
+      background: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19.4624 21.8564C19.6855 21.9491 19.9248 21.9967 20.1664 21.9964C20.5271 21.9921 20.8786 21.8819 21.1772 21.6794C21.4757 21.4769 21.7082 21.1912 21.8457 20.8577C21.9831 20.5241 22.0195 20.1576 21.9503 19.8035C21.8811 19.4495 21.7093 19.1236 21.4564 18.8664L13.5864 10.9964L21.4564 3.12641C21.6264 2.95634 21.7613 2.75445 21.8534 2.53226C21.9454 2.31006 21.9928 2.07191 21.9928 1.83141C21.9928 1.5909 21.9454 1.35275 21.8534 1.13056C21.7613 0.908361 21.6264 0.706468 21.4564 0.536407C21.2863 0.366345 21.0844 0.231444 20.8622 0.139408C20.64 0.0473707 20.4019 0 20.1614 0C19.6757 0 19.2098 0.192951 18.8664 0.536407L10.9964 8.40639L3.12641 0.536407C2.78295 0.192951 2.31713 0 1.83141 0C1.34569 0 0.879862 0.192951 0.536407 0.536407C0.192951 0.879862 0 1.34569 0 1.83141C0 2.31713 0.192951 2.78295 0.536407 3.12641L8.40639 10.9964L0.536371 18.8664C0.283437 19.1236 0.111688 19.4495 0.0424806 19.8035C-0.0267265 20.1576 0.00966118 20.5241 0.147119 20.8577C0.284577 21.1912 0.517041 21.4769 0.815604 21.6794C1.11417 21.8819 1.46566 21.9921 1.82637 21.9964C2.06798 21.9967 2.30725 21.9491 2.53037 21.8564C2.75349 21.7637 2.95606 21.6278 3.12637 21.4564L10.9964 13.5864L18.8664 21.4564C19.0367 21.6278 19.2393 21.7637 19.4624 21.8564Z' fill='%23191919'/%3E%3C/svg%3E%0A") no-repeat center;  
+      background-size: contain;
+    }
+  }
 }
 
 #login {
@@ -950,18 +1003,20 @@ footer {
         align-items: flex-end;
 
         a {
-          background-color: v.$bg-color;
-          width: 30px;
-          height: 26px;
           text-align: center;
           border-radius: 100%;
           margin-left: 5px;
           line-height: 21px;
 
-          .material-icons {
-            font-size: 16px;
+          .svg-icons {
+            display: inline-block;
+            &.i-fresh{
+              width: 30px;
+              height: 30px;
+              background: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20 0C16.0444 0 12.1776 1.17298 8.8886 3.37061C5.59962 5.56824 3.03617 8.69181 1.52242 12.3463C0.00866568 16.0009 -0.387401 20.0222 0.384303 23.9018C1.15601 27.7814 3.06082 31.3451 5.85787 34.1421C8.65492 36.9392 12.2186 38.844 16.0982 39.6157C19.9778 40.3874 23.9992 39.9913 27.6537 38.4776C31.3082 36.9638 34.4318 34.4004 36.6294 31.1114C38.827 27.8224 40 23.9556 40 20C40 14.6957 37.8929 9.60859 34.1421 5.85786C30.3914 2.10714 25.3043 0 20 0V0ZM8.86001 13.69H10.32C11.2811 13.5984 12.2499 13.7462 13.14 14.12C14.3183 14.7607 15.3799 15.5957 16.28 16.59C16.4802 16.7823 16.5959 17.0462 16.6015 17.3238C16.6072 17.6013 16.5023 17.8698 16.31 18.07C16.1177 18.2702 15.8538 18.3859 15.5762 18.3915C15.2987 18.3971 15.0302 18.2923 14.83 18.1C14.0876 17.2788 13.2284 16.5712 12.28 16C11.64 15.7699 10.9562 15.6878 10.28 15.76H8.86001C8.58286 15.76 8.31706 15.6499 8.12108 15.4539C7.92511 15.258 7.81501 14.9922 7.81501 14.715C7.81501 14.4378 7.92511 14.172 8.12108 13.9761C8.31706 13.7801 8.58286 13.67 8.86001 13.67V13.69ZM30.76 26.16L27.24 28.16C27.0838 28.2665 26.9007 28.3266 26.7118 28.3333C26.5228 28.3399 26.3359 28.2929 26.1726 28.1977C26.0093 28.1024 25.8764 27.9628 25.7892 27.7951C25.702 27.6274 25.6641 27.4384 25.68 27.25V26.25C24.8823 26.292 24.0855 26.1518 23.35 25.84C22.1787 25.185 21.1216 24.344 20.22 23.35C20.0211 23.159 19.9062 22.8969 19.9006 22.6212C19.8949 22.3455 19.9991 22.0789 20.19 21.88C20.381 21.6811 20.6431 21.5662 20.9188 21.5606C21.1945 21.5549 21.4611 21.659 21.66 21.85C22.3998 22.6958 23.2669 23.4211 24.23 24C24.6929 24.1735 25.1861 24.2518 25.68 24.23V23.23C25.6813 23.0396 25.7339 22.853 25.8322 22.6899C25.9305 22.5268 26.071 22.3932 26.2388 22.3032C26.4066 22.2132 26.5956 22.17 26.7858 22.1782C26.9761 22.1865 27.1606 22.2458 27.32 22.35L30.76 24.35C30.9318 24.4308 31.0771 24.5587 31.1788 24.719C31.2806 24.8793 31.3346 25.0652 31.3346 25.255C31.3346 25.4448 31.2806 25.6307 31.1788 25.791C31.0771 25.9513 30.9318 26.0792 30.76 26.16V26.16ZM30.76 15.65L27.24 17.65C27.0838 17.7565 26.9007 17.8166 26.7118 17.8233C26.5228 17.8299 26.3359 17.7829 26.1726 17.6877C26.0093 17.5924 25.8764 17.4528 25.7892 17.2851C25.702 17.1174 25.6641 16.9284 25.68 16.74V15.74C23.93 15.74 23.56 16.12 18.99 20.69C13.4 26.25 13.4 26.25 10.32 26.25H8.86001C8.58286 26.25 8.31706 26.1399 8.12108 25.9439C7.92511 25.748 7.81501 25.4822 7.81501 25.205C7.81501 24.9278 7.92511 24.662 8.12108 24.4661C8.31706 24.2701 8.58286 24.16 8.86001 24.16H10.32C12.53 24.16 12.53 24.16 17.5 19.16C22.77 13.9 23.08 13.6 25.68 13.59V12.59C25.661 12.3922 25.7014 12.1933 25.796 12.0185C25.8906 11.8438 26.0351 11.7012 26.211 11.6089C26.387 11.5167 26.5865 11.4789 26.784 11.5005C26.9815 11.522 27.1681 11.6019 27.32 11.73L30.76 13.73C30.9459 13.8124 31.1039 13.9469 31.2148 14.1173C31.3257 14.2877 31.3847 14.4867 31.3847 14.69C31.3847 14.8933 31.3257 15.0923 31.2148 15.2627C31.1039 15.4331 30.9459 15.5676 30.76 15.65V15.65Z' fill='%23191919'/%3E%3C/svg%3E ") no-repeat center;  
+              background-size: contain;
+            }
           }
-
         }
       }
     }
