增加文字 調整設計師版面 效果切換功能

--- a/css/global.css
+++ b/css/global.css
@@ -35,10 +35,8 @@ nav .sidebar .menu > li:hover .menu-link, nav .sidebar .menu .menu-link.active, 
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -74,12 +72,9 @@ h1 {
  */
 hr {
   -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
+          box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
 
 /**
@@ -87,10 +82,8 @@ hr {
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
@@ -107,13 +100,10 @@ a {
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */
+          text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -131,10 +121,8 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
@@ -184,14 +172,10 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
@@ -199,8 +183,7 @@ textarea {
  * 1. Show the overflow in Edge.
  */
 button,
-input {
-  /* 1 */
+input { /* 1 */
   overflow: visible;
 }
 
@@ -209,8 +192,7 @@ input {
  * 1. Remove the inheritance of text transform in Firefox.
  */
 button,
-select {
-  /* 1 */
+select { /* 1 */
   text-transform: none;
 }
 
@@ -260,18 +242,12 @@ fieldset {
  */
 legend {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
+          box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
@@ -295,10 +271,8 @@ textarea {
 [type=checkbox],
 [type=radio] {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
+          box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
@@ -314,10 +288,8 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 [type=search] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -332,10 +304,8 @@ textarea {
  * 2. Change font properties to `inherit` in Safari.
  */
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
@@ -379,11 +349,11 @@ header {
 
 nav {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 0 auto;
   top: 0;
   left: 0;
-  padding: 70px 0;
+  padding: 70px 15px;
   z-index: 5;
 }
 @media all and (max-width: 991px) {
@@ -996,15 +966,14 @@ a.ui-button:active,
 
 body,
 html {
-  -webkit-text-size-adjust: 100%;
   letter-spacing: 1.3px;
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
-  font-size: 14px;
+  font-size: 15px;
   position: relative;
   background-color: #282828;
-  line-height: 1.6;
+  line-height: 1.5;
   font-family: "源泉圓體 R", Microsoft JhengHei, Arial, sans-serif;
 }
 body.no-scroll,
@@ -1014,13 +983,13 @@ html.no-scroll {
 @media all and (min-width: 992px) {
   body,
 html {
-    font-size: 16.5px;
+    font-size: 18px;
   }
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   body,
 html {
-    font-size: 15px;
+    font-size: 16px;
   }
 }
 
@@ -1621,7 +1590,7 @@ input:-internal-autofill-selected {
 
 .section {
   color: #fff;
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 50px auto 50px auto;
 }
 .section:last-of-type {
@@ -1647,7 +1616,7 @@ input:-internal-autofill-selected {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  margin: 30px 0;
+  margin: 30px 0 60px 0;
   width: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -1795,7 +1764,7 @@ footer img {
   }
 }
 footer > div {
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2230,7 +2199,6 @@ footer > div a:hover.email path {
     height: 0;
     overflow: hidden;
   }
-
   .video-container iframe,
 .video-container object,
 .video-container embed {
@@ -2249,7 +2217,6 @@ footer > div a:hover.email path {
     height: 0;
     overflow: hidden;
   }
-
   .video-container iframe,
 .video-container object,
 .video-container embed {
