--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -5,7 +5,7 @@ nav {
   margin: 0 auto;
   top: 0;
   left: 0;
-  padding: 70px 0;
+  padding: 70px 15px;
   z-index: 5;
 
   @include v.under-pad-width {
