--- a/scss/global.scss
+++ b/scss/global.scss
@@ -11,15 +11,14 @@
 
 body,
 html {
-  -webkit-text-size-adjust: 100%;
   letter-spacing: 1.3px; 
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
-  font-size: 14px;
+  font-size: 15px;
   position: relative; 
   background-color: v.$bg-color;
-  line-height: 1.6; 
+  line-height: 1.5; 
   font-family: '源泉圓體 R',Microsoft JhengHei, Arial, sans-serif;
 
 
@@ -28,11 +27,11 @@ html {
   }
 
   @include v.pc-width {
-    font-size: 16.5px;
+    font-size: 18px;
   }
 
   @include v.pad-width {
-    font-size: 15px;
+    font-size: 16px;
   }
 }
 
@@ -612,7 +611,7 @@ input:-internal-autofill-selected {
 
   .actions {
     display: inline-flex;
-    margin: 30px 0;
+    margin: 30px 0 60px 0;
     width: 100%;
     justify-content: center;
 
