--- a/css/global.css
+++ b/css/global.css
@@ -349,7 +349,7 @@ header {
 
 nav {
   width: 100%;
-  max-width: 1300px;
+  max-width: 1400px;
   margin: 0 auto;
   top: 0;
   left: 0;
@@ -370,7 +370,7 @@ nav .input-toggler {
 nav .menu-toggler {
   position: absolute;
   right: 30px;
-  top: 20px;
+  top: 25px;
   width: 25px;
   z-index: 1000;
   display: none;
@@ -397,7 +397,7 @@ nav .menu-toggler .menu-toggler-line {
   width: 100%;
   height: 2px;
   background: #C53932;
-  margin: 0 0 8px 0px;
+  margin: 0 0 5px 0px;
   position: relative;
   -webkit-transition: all 0.35s ease-out;
   transition: all 0.35s ease-out;
@@ -423,10 +423,18 @@ nav .sidebar .nav-menu {
       -ms-flex-align: center;
           align-items: center;
 }
+nav .sidebar .nav-brand {
+  width: 200px;
+}
 @media all and (max-width: 991px) {
   nav .sidebar .nav-brand {
-    width: 18vw;
-    padding: 15px 0;
+    width: 170px;
+    margin: 15px 0;
+  }
+}
+@media all and (max-width: 768px) {
+  nav .sidebar .nav-brand {
+    width: 150px;
   }
 }
 nav .sidebar .menu {
@@ -454,6 +462,7 @@ nav .sidebar .menu .dropdown-menu {
   height: fit-content;
   position: absolute;
   top: 45px;
+  z-index: 10;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -504,6 +513,7 @@ nav .sidebar .menu .dropdown-menu li:hover {
   }
 }
 nav .sidebar .menu .dropdown-menu li a {
+  display: block;
   color: #fff;
 }
 nav .sidebar .menu > li {
@@ -1385,9 +1395,7 @@ input:-internal-autofill-selected {
 
 .movie-level {
   margin: 10px 0;
-  width: 75px;
-  max-width: 75px;
-  padding: 5px 10px 2px 10px;
+  padding: 5px 10px;
   display: inline-block;
   color: #000;
   text-align: center;
@@ -1402,7 +1410,12 @@ input:-internal-autofill-selected {
 }
 .content-row .row {
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 45px;
+}
+@media all and (max-width: 991px) {
+  .content-row .row {
+    margin-bottom: 15px;
+  }
 }
 .content-row .icon-row {
   position: relative;
@@ -1590,7 +1603,7 @@ input:-internal-autofill-selected {
 
 .section {
   color: #fff;
-  max-width: 1300px;
+  max-width: 1400px;
   margin: 50px auto 50px auto;
 }
 .section:last-of-type {
@@ -1624,12 +1637,12 @@ input:-internal-autofill-selected {
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .section .actions {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
 }
 @media all and (max-width: 768px) {
   .section .actions {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 }
 .section .actions .actions-btn {
@@ -1640,7 +1653,7 @@ input:-internal-autofill-selected {
   padding: 10px;
   text-align: center;
   margin-right: 20px;
-  width: 12em;
+  width: 20em;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1754,17 +1767,17 @@ footer img {
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   footer img {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 }
 @media all and (max-width: 768px) {
   footer img {
-    width: 120px;
-    margin-bottom: 20px;
+    width: 180px;
+    margin-bottom: 30px;
   }
 }
 footer > div {
-  max-width: 1300px;
+  max-width: 1400px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
