--- a/css/page.css
+++ b/css/page.css
@@ -390,11 +390,6 @@
   display: block;
   padding: 0 5px;
 }
-@media all and (max-width: 768px) {
-  .section .showing-list a > div {
-    padding: 0;
-  }
-}
 .section .showing-list .poster img {
   border-radius: 10px;
 }
@@ -418,9 +413,6 @@
   background-color: #FCC900;
   background-color: rgba(252, 201, 0, 0.8);
 }
-.section .onlinebook {
-  height: 600px;
-}
 @media all and (min-width: 769px) and (max-width: 991px) {
   .section .onlinebook {
     margin-bottom: 40px;
@@ -441,7 +433,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 56px;
+  margin-bottom: 20px;
 }
 .section .onlinebook .select-box .svg-icons {
   width: 30px;
@@ -465,7 +457,7 @@
 .section .onlinebook .select-box select {
   width: 100%;
   height: 60px;
-  margin-left: 1vw;
+  margin-left: 10px;
   background-color: #191919;
 }
 .section .onlinebook .select-box select option {
@@ -476,9 +468,6 @@
   .section .onlinebook .select-box {
     padding-right: 0;
   }
-}
-.section .lastestnew {
-  height: 600px;
 }
 .section .lastestnew .news-box {
   width: 100%;
@@ -500,14 +489,19 @@
   }
 }
 .section .lastestnew .news-box img {
-  width: 48%;
+  width: 50%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   border-radius: 10px;
 }
+@media all and (max-width: 768px) {
+  .section .lastestnew .news-box img {
+    width: 100%;
+  }
+}
 .section .lastestnew .news-box .new-info {
-  width: 50%;
+  width: 45%;
   margin-left: 20px;
   padding-right: 5px;
   text-align: left;
@@ -604,7 +598,7 @@
 }
 .section .booking-history .row-left img {
   border-radius: 10px;
-  width: 240px;
+  max-width: 240px;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .section .booking-history .row-left {
@@ -1158,6 +1152,9 @@
 }
 .section .account select option[value=none] {
   color: rgba(255, 255, 255, 0.452);
+}
+.section .booking .movie-item .movie-level {
+  margin-top: 30px;
 }
 .section .booking .actions {
   -webkit-box-pack: start;
