--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -23,7 +23,7 @@ nav {
   .menu-toggler {
     position: absolute;
     right: 30px;
-    top: 20px;
+    top: 25px;
     width: 25px;
     z-index: 1000;
     display: none;
@@ -40,7 +40,7 @@ nav {
       width: 100%;
       height: 2px;
       background: v.$primary;
-      margin: 0 0 8px 0px;
+      margin: 0 0 5px 0px;
       position: relative;
       -webkit-transition: all 0.35s ease-out;
       -moz-transition: all 0.35s ease-out;
@@ -63,9 +63,13 @@ nav {
 
 
     .nav-brand {
+      width: 200px;
       @include v.under-pad-width {
-        width: 18vw;
-        padding: 15px 0;
+        width: 170px;
+        margin: 15px 0;
+      }
+      @include v.phone-width { 
+        width: 150px;
       }
     }
 
@@ -84,6 +88,7 @@ nav {
         height: fit-content;
         position: absolute;
         top: 45px;
+        z-index: 10;
         display: flex;
         flex-direction: column;
         overflow: hidden;
@@ -120,6 +125,7 @@ nav {
           }
 
           a {
+            display: block;
             color: v.$font-primary;
            
           }
