--- a/scss/page.scss
+++ b/scss/page.scss
@@ -19,12 +19,6 @@
     a {
       display: block;
       padding: 0 5px;
-
-      >div {
-        @include v.phone-width {
-          padding: 0;
-        }
-      } 
     }
 
     .poster {
@@ -57,7 +51,6 @@
   }
 
   .onlinebook {
-    height: 600px;
     @include v.pad-width {
       margin-bottom: 40px;
     }
@@ -72,7 +65,7 @@
       div {
         display: flex; 
         align-items: center;
-        margin-bottom: 56px;
+        margin-bottom: 20px;
       }
 
       .svg-icons{
@@ -98,7 +91,7 @@
       select {
         width: 100%;
         height: 60px;
-        margin-left: 1vw;
+        margin-left: 10px;
         background-color: #191919;
         option{
           background: #191919;
@@ -113,7 +106,6 @@
   }
 
   .lastestnew {
-    height: 600px;
     .news-box {
       width: 100%;
 
@@ -129,13 +121,17 @@
       }
 
       img {
-        width: 48%;
+        width: 50%;
         height: fit-content;
         border-radius: 10px;
+        @include v.phone-width {
+          width: 100%;
+        }
+
       }
 
       .new-info {
-        width: 50%;
+        width: 45%;
         margin-left: 20px;
         padding-right: 5px;
         text-align: left;
@@ -243,7 +239,7 @@
     }
 
     .row-left {
-      img{border-radius: 10px;width: 240px;}
+      img{border-radius: 10px;max-width: 240px;}
       @include v.pad-width {
         width: 50%;
         margin-bottom: 20px;
@@ -814,6 +810,8 @@
   }
 
   .booking {
+    .movie-item .movie-level{margin-top: 30px;}
+
     .actions {
       justify-content: flex-start;
     }
