--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@ $bg-color: #282828;
 $yellow-bg-color:#FCC900;
 $orange-bg-color:#E56F28;
 $red-bg-color:#DD362B;
-$blue-bg-color:#00ABF2;
+$blue-bg-color:#5A96C3;
 $green-bg-color:#73C044;
 
 $max-width: 1400px;
