--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -4,21 +4,34 @@
     src: local('Broadway Regular'),url('../fonts/Broadway Regular.ttf') format("truetype"),
 }
 @font-face {
-    font-family: 'EurostileBold';
-    font-display: swap;
-    unicode-range:U+0000-U+007F;
-    src: local('EurostileBold'), 
-         url('../fonts/EurostileBold.ttf') format("truetype"),    
-} 
-@font-face {
-    font-family: 'Eurostile Extended';
-    font-display: swap;
-    src: local('Eurostile Extended'), 
-         url('../fonts/EurostileExtended.ttf') format("truetype"),    
-} 
-@font-face {
     font-family: '源泉圓體 R';
     font-display: swap;
     src: local('源泉圓體 R'), 
-         url('../fonts/GenSenRoundedTW-R.ttf') format("truetype"),    
+         url('../fonts/GenSenRoundedTW-R.ttf') format("truetype");
+    unicode-range:U+4E00-9FFF,U+3100-312F
 } 
+@font-face { 
+    font-family: 'EuroStyle';
+    font-display: swap;
+    src: local('EuroStyle'), 
+         url('../fonts/EuroStyle Normal.ttf') format("truetype");
+    unicode-range: U+00-024F,U+00-02AF
+} 
+@font-face { 
+    font-family: 'Eurostile Extended';
+    font-display: swap;
+    src: local('Eurostile Extended'), 
+         url('../fonts/EurostileExtended-Roman.woff') format("woff"),
+         url('../fonts/EurostileExtended-Roman.woff2') format("woff2"),
+         url('../fonts/EurostileExtended.ttf') format("truetype");
+    unicode-range: U+00-024F,U+00-02AF
+} 
+@font-face {
+    font-family: 'EurostileBold';
+    font-display: swap;
+    src: local('EurostileBold'), 
+         url('../fonts/EurostileBold.ttf') format("truetype");
+    unicode-range: U+00-024F,U+00-02AF
+} 
+
+
