--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,4 +1,5 @@
-header{background-image: url(../image/01_index_02_header.png);background-repeat: no-repeat;background-size: cover;background-position: center center;}
+header{position: sticky;top: 0;z-index: 100;transition:  background-image .3s linear;
+  background-image: url(../image/01_index_02_header.png);background-repeat: no-repeat;background-size: cover;background-position: center center;}
 nav {
   width: 100%;
   max-width: v.$max-width;
@@ -6,14 +7,15 @@ nav {
   top: 0;
   left: 0;
   padding: 70px 15px;
-  z-index: 5;
+  z-index: 100;
+  transition: padding .3s linear;
 
   @include v.under-pad-width {
     padding: 0;
   }
 
   &.mini {
-    padding: 10px 0;
+    padding: 10px 15px;
   }
 
   .input-toggler {
@@ -63,13 +65,14 @@ nav {
 
 
     .nav-brand {
-      width: 200px;
+      width: 180px;
       @include v.under-pad-width {
-        width: 170px;
+        width: 150px;
+        min-width: 120px;
         margin: 15px 0;
       }
       @include v.phone-width { 
-        width: 150px;
+        width: 120px;
       }
     }
 
@@ -460,6 +463,7 @@ nav {
       background-color: #000;
       width: 100%;
       top: 0;
+      left: 0;
       bottom: 0;
       opacity: 0;
       display: none;
@@ -512,7 +516,7 @@ nav {
       }
 
       &~.menu-toggler .menu-toggler-line:nth-child(3) {
-        top: -5px;
+        top: -2px;
         transform: translateY(10);
         transform: rotate(135deg);
       }
